[EFL] Memory leak in RenderThemeEfl https://bugs.webkit.org/show_bug.cgi?id=86609

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-05-16
Reviewed by Martin Robinson.

Fix a memory leak by freeing the cairo surface with
cairo_surface_destroy.

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::cacheThemePartFlush):

git-svn-id: svn://svn.chromium.org/blink/trunk@117297 bbb929c8-8fbe-4397-9dbb-9b2b20218538